# Lixom

./: .gitignore  CMakeLists.txt  LICENSE  README.md  get_page_from_gva_call_chain.md
demos/: demo_https.c  demo_libxom.c
libxom/: libxom.c
modxom/: modxom.c  modxom.h
notes/: README.md  example-note.md  lixom-ept-xom-implementation.md  lixom-openssl-integration.md
notes/xen-hypervisor/: arm-arch-specific-startup.md  arm-startup-flow.md  common-startup-flow.md  domain0-distribution-choice.md  domain0-essence.md  domain0-installation-guide.md  domainU-configuration-guide.md  flask-architecture.md  gpu-virtualization.md  hypercall-gfn-design.md  iommu-support.md  vcpu-lifecycle-and-domain-startup.md  xen-hypercalls.md  xen-startup.md  xen-virtualization-modes.md  xsm-architecture.md
openssl-provider/: openssl.conf
openssl-provider/include/: aes_xom.h
openssl-provider/src/: aes_aesni.s  aes_vaes.s  ghash.s  hmac_sha256.s  xom_aes_128_ctr.c  xom_aes_128_gcm.c  xom_aes_common.c  xom_hmac_sha256.c  xom_provider.c  xom_subpage_pool.cpp
xen/: CHANGELOG.md  MAINTAINERS
xen/xen/: Makefile
xen/xen/arch/arm/: Makefile  mem_access.c  mmuext.c  setup.c  xom_seal.c
xen/xen/arch/x86/: Makefile  cpu-policy.c  extable.c  mm.c  platform_hypercall.c  xom_seal.c
xen/xen/arch/x86/hvm/: Makefile  hvm.c  rtc.c  vlapic.c
xen/xen/arch/x86/hvm/svm/: svm.c
xen/xen/arch/x86/hvm/vmx/: vmcs.c  vmx.c  vvmx.c
xen/xen/arch/x86/include/asm/: current.h  domain.h  p2m.h  uaccess.h
xen/xen/arch/x86/include/asm/hvm/: hvm.h
xen/xen/arch/x86/include/asm/hvm/vmx/: vmcs.h  vmx.h
xen/xen/arch/x86/mm/: mem_access.c  p2m.c
xen/xen/arch/x86/mm/hap/: guest_walk.c  hap.c
xen/xen/common/: domain.c
xen/xen/common/sched/: private.h
xen/xen/drivers/cpufreq/: cpufreq.c
xen/xen/include/: hypercall-defs.c
xen/xen/include/public/: xen.h
xen/xen/include/xen/: mem_access.h  pci.h  sched.h  spinlock.h  xom_seal.h
